se agrega toolbar paginas estaticas

--- a/src/app/auth/pages/login/login.page.html
+++ b/src/app/auth/pages/login/login.page.html
@@ -104,7 +104,7 @@
           >
           <div class="text-sm">
             <a
-              href="recuperacion-contrasenia"
+              href="auth/recuperacion-contrasenia"
               class="font-semibold text-pricipal-grey-400 hover:text-principal-grey-700 mr-2"
               >¿Olvidaste tu contraseña?</a
             >
@@ -138,7 +138,7 @@
     <p class="mt-10 text-center text-sm text-pricipal-grey-700">
       ¿No eres miembro? |
       <a
-        href="registro"
+        href="auth/registro"
         class="font-semibold leading-6 text-principal-blue-400 hover:text-principal-blue-600"
         >Crear una cuenta</a
       >
@@ -196,7 +196,7 @@
                 >Contraseña</label
               >
               <a
-                href="recuperacion-contrasenia"
+                href="auth/recuperacion-contrasenia"
                 class="text-pricipal-grey-400 hover:text-principal-grey-700 text-sm font-semibold"
                 >¿Olvidaste tu contraseña?</a
               >
@@ -283,7 +283,7 @@
         <p class="mt-8 text-center text-sm text-pricipal-grey-400">
           ¿No eres miembro? |
           <a
-            href="registro"
+            href="auth/registro"
             class="text-principal-blue-400 hover:text-principal-blue-600 font-semibold"
             >Crear una cuenta</a
           >
