--- a/src/app/auth/pages/registro-organizaciones/registro-organizaciones.page.html
+++ b/src/app/auth/pages/registro-organizaciones/registro-organizaciones.page.html
@@ -185,7 +185,7 @@
     <p class="mt-10 text-center text-sm text-pricipal-grey-400">
       ¿Ya tienes una cuenta? |
       <a
-        href="login"
+        href="auth/login"
         class="font-semibold leading-6 text-principal-blue-400 hover:text-principal-blue-600"
         >Inicia sesión</a
       >
@@ -350,7 +350,7 @@
         <p class="mt-8 text-center text-sm text-pricipal-grey-400">
           ¿Ya tienes una cuenta? |
           <a
-            href="login"
+            href="auth/login"
             class="text-principal-blue-400 hover:text-principal-blue-600 font-semibold"
             >Inicio Sesión</a
           >
