--- a/src/app/auth/pages/registro/registro.page.html
+++ b/src/app/auth/pages/registro/registro.page.html
@@ -200,7 +200,7 @@
     <p class="mt-10 text-center text-sm text-pricipal-grey-400">
       ¿Ya tienes una cuenta? |
       <a
-        href="login"
+        href="auth/login"
         class="font-semibold leading-6 text-principal-blue-400 hover:text-principal-blue-600"
         >Inicia sesión</a
       >
@@ -208,7 +208,7 @@
     <p class="mt-10 text-center text-sm text-pricipal-grey-400">
       ¡Registra tu organización! |
       <a
-        href="registro-organizaciones"
+        href="auth/registro-organizaciones"
         class="font-semibold leading-6 text-principal-blue-400 hover:text-principal-blue-600"
         >Registro Organizaciones</a
       >
@@ -428,7 +428,7 @@
         <p class="mt-8 text-center text-sm text-pricipal-grey-400">
           ¿Ya tienes una cuenta? |
           <a
-            href="login"
+            href="auth/login"
             class="text-principal-blue-400 hover:text-principal-blue-600 font-semibold"
             >Inicio Sesión</a
           >
@@ -436,7 +436,7 @@
         <p class="mt-10 text-center text-sm text-pricipal-grey-400">
           ¡Registra tu organización! |
           <a
-            href="registro-organizaciones"
+            href="auth/registro-organizaciones"
             class="font-semibold leading-6 text-principal-blue-400 hover:text-principal-blue-600"
           >Registro Organizaciones</a>
         </p>
