--- a/src/app/auth/pages/recuperacion-contrasenia/recuperacion-contrasenia.page.html
+++ b/src/app/auth/pages/recuperacion-contrasenia/recuperacion-contrasenia.page.html
@@ -111,7 +111,7 @@
     <p class="mt-10 text-center text-sm text-pricipal-grey-700">
       ¿No eres miembro? |
       <a
-        href="registro"
+        href="auth/registro"
         class="font-semibold leading-6 text-principal-blue-400 hover:text-principal-blue-600"
         >Crear una cuenta</a
       >
@@ -235,7 +235,7 @@
         <p class="mt-8 text-center text-sm text-pricipal-grey-400">
           ¿No eres miembro? |
           <a
-            href="registro"
+            href="auth/registro"
             class="text-principal-blue-400 hover:text-principal-blue-600 font-semibold"
             >Crear una cuenta</a
           >
