--- a/src/app/dashboard/pages/contacto/contacto.page.html
+++ b/src/app/dashboard/pages/contacto/contacto.page.html
@@ -3,7 +3,7 @@
 <div class="flex" id="carouselExample" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators mt-24">
-    <h1 class="text-4xl">Eventos works</h1>
+    <h1 class="text-4xl">Contacto work</h1>
     <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExample" data-slide-to="1"></li>
     <li data-target="#carouselExample" data-slide-to="2"></li>
