--- a/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
+++ b/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
@@ -1,13 +1,34 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>mascotasList</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+    <div *ngFor="let mascota of mascotas">
+      <div
+        class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 overflow-hidden">
+        <a href="#">
+          <div class="aspect-w-1 aspect-h-1 ">
+            <img class="object-contain w-100 h-100 rounded-t-lg"
+              [src]="mascota.foto ? mascota.foto : '../../../assets/icon/Logo_AppDopta.jpeg'"
+              alt="Imagen de {{ mascota.nom_mascota }}" />
+          </div>
+        </a>
+        <div class="flex-grow p-5">
+          <p class="mb-2 font-bold text-gray-700 dark:text-gray-400">
+            {{mascota.especie}} - {{ mascota.edad }}
+          </p>
+          <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{ mascota.titulo |
+            uppercase }}</h5>
+          <p class="mb-2 font-medium text-gray-700 dark:text-gray-400">
+            Nombre: {{ mascota.nom_mascota }}
+          </p>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">mascotasList</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+          <button
+          type="submit"
+          class="w-full py-3 bg-pricipal-grey-400 text-white rounded-full shadow-md hover:bg-pricipal-grey-400 transition duration-300"
+        >
+          Detalles
+        </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </ion-content>
