push aplicacion funcionando con publicaciones y usuario que realiza la publicacion

--- a/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
+++ b/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
@@ -20,6 +20,12 @@
             Nombre: {{ mascota.nom_mascota }}
           </p>
 
+          <p class="mb-2 font-medium text-gray-700 dark:text-gray-400">
+            Usuario: {{ mascota.usuario.username }}
+            <br>
+            Email:    {{ mascota.usuario.email }}
+          </p>
+
 
           <button
           type="submit"
