--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -67,7 +67,7 @@
                     right-[0rem] top-[3.3rem] bg-principal-blue-400 divide-principal-grey-700"
             >
               <div class="py-3" role="none">
-                <p class="text-sm truncate px-2 text-white">{{currentUser.user.username | titlecase }}</p>
+                <p class="text-sm truncate px-2 text-white">{{currentUser.user.username | titlecase }}#{{currentUser.user.id}}</p>
 
               </div>
               <ul class="py-4" role="none">
