--- a/src/app/dashboard/pages/contacto/contacto.page.html
+++ b/src/app/dashboard/pages/contacto/contacto.page.html
@@ -1,35 +1,48 @@
+<div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full space-y-8">
+    <div>
+      <h2 class="mt-6 text-center text-3xl leading-9 font-extrabold text-principal-grey-700">
+        Contactanos
+      </h2>
+      <p class="mt-2 text-center text-sm leading-5 text-principal-grey-700">
+        Nos encantaria escucharte!
+      </p>
+    </div>
+    <form class="mt-8 space-y-6" action="#" method="POST">
+      <input type="hidden" name="remember" value="true">
+      <div class="rounded-md shadow-sm -space-y-px">
+        <div>
+          <label for="name" class="sr-only">Nombre Completo</label>
+          <input id="name" name="name" type="text" autocomplete="name" required
+                 class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                 placeholder="Nombre Completo">
+        </div>
+        <div>
+          <label for="email" class="sr-only">Correo electronico</label>
+          <input id="email" name="email" type="email" autocomplete="email" required
+                 class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                 placeholder="Correo electronico">
+        </div>
+        <div>
+          <label for="subject" class="sr-only">Asunto</label>
+          <input id="subject" name="subject" type="text" required
+                 class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                 placeholder="Asunto">
+        </div>
+        <div>
+          <label for="message" class="sr-only">Mensaje</label>
+          <textarea id="message" name="message" rows="4" required
+                    class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                    placeholder="Mensaje"></textarea>
+        </div>
+      </div>
 
-<!-- Carousel -->
-<div class="flex" id="carouselExample" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators mt-24">
-    <h1 class="text-4xl">Contacto work</h1>
-    <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExample" data-slide-to="1"></li>
-    <li data-target="#carouselExample" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 1">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 2">
-    </div>
-    <div class="carousel-item">
-      <img src="../../../../assets/icon/Logo_AppDopta.jpeg" alt="Image 3">
-    </div>
+      <div>
+        <button type="submit"
+                class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-pricipal-grey-400 hover:bg-principal-blue-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:">
+          Enviar
+        </button>
+      </div>
+    </form>
   </div>
-
-  <!-- Controls -->
-  <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
-
