--- a/src/app/dashboard/pages/contacto/contacto.page.html
+++ b/src/app/dashboard/pages/contacto/contacto.page.html
@@ -1,3 +1,9 @@
+<ion-content *ngIf="isMobilView; else desktopView" [fullscreen]="true">
+  <h1>Aqui va la version mobil del form contacto indecente jijiji</h1>
+</ion-content>
+
+<ng-template #desktopView>
+<ion-content>
 <div class="min-h-screen flex items-center justify-center bg-gray-100 py-12 px-4 sm:px-6 lg:px-8">
   <div class="max-w-md w-full space-y-8">
     <div>
@@ -14,20 +20,20 @@
         <div>
           <label for="name" class="sr-only">Nombre Completo</label>
           <input id="name" name="name" type="text" autocomplete="name" required
-                 class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                 placeholder="Nombre Completo">
+                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                placeholder="Nombre Completo">
         </div>
         <div>
           <label for="email" class="sr-only">Correo electronico</label>
           <input id="email" name="email" type="email" autocomplete="email" required
-                 class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                 placeholder="Correo electronico">
+                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                placeholder="Correo electronico">
         </div>
         <div>
           <label for="subject" class="sr-only">Asunto</label>
           <input id="subject" name="subject" type="text" required
-                 class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                 placeholder="Asunto">
+                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                placeholder="Asunto">
         </div>
         <div>
           <label for="message" class="sr-only">Mensaje</label>
@@ -46,3 +52,6 @@
     </form>
   </div>
 </div>
+</ion-content>
+
+</ng-template>
