--- a/src/app/dashboard/pages/eventos/eventos.page.html
+++ b/src/app/dashboard/pages/eventos/eventos.page.html
@@ -1,9 +1,14 @@
+<ion-content *ngIf="isMobilView; else desktopView" [fullscreen]="true">
+  <h1>Aqui va la version mobil de favoritos </h1>
+</ion-content>
 
+<ng-template #desktopView>
+<ion-content>
 <!-- Carousel -->
 <div class="flex" id="carouselExample" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators mt-24">
-    <h1 class="text-4xl">Eventos works</h1>
+    <h1 class="text-4xl">Favoritos work</h1>
     <li data-target="#carouselExample" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExample" data-slide-to="1"></li>
     <li data-target="#carouselExample" data-slide-to="2"></li>
@@ -33,3 +38,5 @@
   </a>
 </div>
 
+</ion-content>
+</ng-template>
