--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,23 +1,34 @@
+
+<div *ngIf="isMobilView; else desktopView">
+  <h1>
+    Aqui hay que trabajar el toolbar para ver la versión mobil
+    el que le meta mano aqui ideal dejarlo como burger besitos en el oclo
+  </h1>
+</div>
+
+
+<ng-template #desktopView>
+  <!-- <ion-content> -->
 <div
   class="fixed top-0 z-50 w-full border-b-1
         shadow-md border-principal-grey-400 bg-white"
 >
-
   <div class="px-3 py-4 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between gap-2">
+      <div class="flex items-center justify-between sm:ml-4 md:ml-6 xl:ml-8">
 
-      <div class="flex items-center justify-between ml-36">
         <img
-          class="flex ml-8"
+          class="flex ml-8 sm:ml-4 md:ml-6 xl:ml-8"
           src="../../../../assets/icon/Logo_AppDopta.jpeg" class="size-20 rounded-lg"
           alt="FlowBite Logo"
         />
-        <div class="ml-8 flex items-center justify-between">
+
+        <div class="ml-8 flex items-center justify-between sm:ml-4 md:ml-6 xl:ml-8">
           <h1 class="text-3xl font-bold">AppDopta</h1>
           <p class="ml-4 text-3xl text-principal-grey-400">|</p>
         </div>
 
-        <div class="ml-8 flex items-center justify-between text-principal-grey-400 font-semibold">
+        <div class="ml-8 flex items-center justify-between text-principal-grey-400 font-semibold sm:flex-wrap md:flex-nowrap xl:flex-nowrap">
           <a href="dashboard/adoptar" class="px-4 hover:text-principal-grey-700">Adoptar</a>
           <a href="dashboard/eventos" class="px-4 hover:text-principal-grey-700">Eventos</a>
           <a href="dashboard/favoritos" class="px-4 hover:text-principal-grey-700">Favoritos</a>
@@ -25,11 +36,12 @@
           <a href="dashboard/sobre-nosotros" class="px-4 hover:text-principal-grey-700">Sobre nosotros</a>
           <a href="dashboard/contacto" class="px-4 hover:text-principal-grey-700">Contacto</a>
         </div>
+
       </div>
 
-
-      <div class="flex items-center relative mr-36">
+      <div class="flex items-center relative sm:mr-4 md:mr-6 xl:mr-8">
         <div class="flex items-center ms-3">
+
           <div *ngIf="currentUser?.user?.username ; else notLoggedIn">
             <button
               type="button"
@@ -43,14 +55,12 @@
                 class="flex items-center justify-center rounded-full bg-principal-grey-400"
                 style="width: 50px; height: 50px;"
               >
-
                 <img
                 class="rounded-full" [src]="currentUser.imagen_perfil" [alt]="currentUser.nombre"
                 style="width: 40px; height: 40px;"
                 > <!--TODO:AJUSTAR PARA QUE SE VEA FOTO DE PERFIL-->
               </div>
             </button>
-
           </div>
 
           <ng-template #notLoggedIn>
@@ -60,7 +70,7 @@
             </div>
           </ng-template>
 
-          @if( isOpenProfile() ) {
+          @if( isOpenProfile() ){
             <div
               class="z-50 text-white font-roboto-mono font-bold mr-4 list-none divide-y
                     rounded-lg shadow absolute w-64 px-4 py-2
@@ -68,7 +78,6 @@
             >
               <div class="py-3" role="none">
                 <p class="text-sm truncate px-2 text-white">{{currentUser.user.username | titlecase }}#{{currentUser.user.id}}</p>
-
               </div>
               <ul class="py-4" role="none">
                 <li class="rounded-lg py-2 my-2 grid grid-rows-2 gap-4">
@@ -79,6 +88,7 @@
                     <i class="fa-solid fa-gear"></i>
                     configuraciones
                   </span>
+
                   <span
                     class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
                     (click)="onLogout()"
@@ -87,20 +97,14 @@
                     Cerrar Sesión
                   </span>
                 </li>
-
               </ul>
-
             </div>
-
           }
-
         </div>
-
       </div>
-
     </div>
-
   </div>
-
-
 </div>
+<!-- </ion-content> -->
+</ng-template>
+
