se agrega el registro organizacion y se arregla el inicio de sesion de este

--- a/src/app/auth/pages/registro-organizaciones/registro-organizaciones.page.html
+++ b/src/app/auth/pages/registro-organizaciones/registro-organizaciones.page.html
@@ -14,20 +14,20 @@
     <form
       [formGroup]="formularioRegistro"
       class="space-y-1"
-      action="#"
+      (ngSubmit)="onSubmit()"
       method="POST"
     >
       <div>
         <label
-          for="nombre"
+          for="razon_social"
           class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
-          >Nombre</label
+          >Razón social</label
         >
         <div class="mt-1">
           <input
-            formControlName="nombre"
-            id="nombre"
-            name="nombre"
+            formControlName="razon_social"
+            id="razon_social"
+            name="razon_social"
             type="text"
             required
             class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
@@ -37,15 +37,15 @@
 
       <div>
         <label
-          for="apellido"
+          for="rut_emp"
           class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
-          >Apellido</label
+          >Rut</label
         >
         <div class="mt-1">
           <input
-            formControlName="apellido"
-            id="apellido"
-            name="apellido"
+            formControlName="rut_emp"
+            id="rut_emp"
+            name="rut_emp"
             type="text"
             required
             class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
@@ -73,16 +73,34 @@
 
       <div>
         <label
-          for="fechaNacimiento"
+          for="telefono"
           class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
-          >Fecha de nacimiento</label
+          >Teléfono1</label
         >
         <div class="mt-1">
           <input
-            formControlName="fechaNacimiento"
-            id="fechaNacimiento"
-            name="fechaNacimiento"
-            type="date"
+            formControlName="telefono"
+            id="telefono"
+            name="telefono"
+            type="number"
+            required
+            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
+          />
+        </div>
+      </div>
+
+      <div>
+        <label
+          for="telefono2"
+          class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
+          >Teléfono2</label
+        >
+        <div class="mt-1">
+          <input
+            formControlName="telefono2"
+            id="telefono2"
+            name="telefono2"
+            type="number"
             required
             class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
@@ -115,7 +133,7 @@
         >
         <div class="mt-1">
           <input
-            formControlName="correo"
+            formControlName="email"
             id="email"
             name="email"
             type="email"
@@ -147,29 +165,6 @@
         <div class="text-errors-red-300" *ngIf="formularioRegistro.get('password')!.errors">
               La contraseña es requerida
         </div>
-      </div>
-
-      <div>
-        <div class="flex items-center justify-between">
-          <label
-            for="password"
-            class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400"
-            >Contraseña</label
-          >
-        </div>
-        <div class="mt-1">
-          <input
-            formControlName="confirmPassword"
-            id="confirmPassword"
-            name="confirmPassword"
-            type="password"
-            required
-            class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
-          />
-        </div>
-          <div class="text-errors-red-300" *ngIf="formularioRegistro.hasError('notSame')">
-            La contraseña no coincide
-          </div>
       </div>
 
       <div class="container-fb flex items-center justify-items-center">
@@ -214,22 +209,109 @@
 
       <div class="mt-5 h-screen container-registro mx-auto my-auto">
         <div class="max-w-md mx-auto">
-        <form [formGroup]="formularioRegistro" class="space-y-6">
+        <form
+        [formGroup]="formularioRegistro"
+        (ngSubmit)="onSubmit()"
+        class="space-y-6">
           <h2 class="text-4xl text-principal-grey-700 font-bold mb-0 pb-0">¡Registra tu organización!</h2>
           <p class="text-pricipal-grey-400 mt-0 pt-0">¡Es gratis!</p>
 
           <div>
             <div class="flex justify-between">
               <label
-                for="username"
+                for="razon_social"
                 class="block text-sm font-medium leading-6 text-principal-blue-400"
-                >Nombre de la organización</label
+                >Razón social</label
               >
             </div>
+            <input
+              formControlName="razon_social"
+              id="razon_social"
+              name="razon_social"
+              type="text"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <label
+              for="rut_emp"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
+              >Rut</label
+            >
+            <input
+              formControlName="rut_emp"
+              id="rut_emp"
+              name="rut_emp"
+              type="text"
+              autocomplete="rut_emp"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <label
+              for="username"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
+              >Nombre de usuario</label
+            >
             <input
               formControlName="username"
               id="username"
               name="username"
+              type="text"
+              autocomplete="username"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <label
+              for="telefono"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
+              >Teléfono1</label
+            >
+            <input
+              formControlName="telefono"
+              id="telefono"
+              name="telefono"
+              type="text"
+              autocomplete="telefono"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <label
+              for="telefono2"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
+              >Teléfono2</label
+            >
+            <input
+              formControlName="telefono2"
+              id="telefono2"
+              name="telefono2"
+              type="text"
+              autocomplete="telefono2"
+              required
+              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
+            />
+          </div>
+
+          <div>
+            <label
+              for="direccion"
+              class="block text-sm font-medium leading-6 text-principal-blue-400"
+              >Dirección</label
+            >
+            <input
+              formControlName="direccion"
+              id="direccion"
+              name="direccion"
               type="text"
               required
               class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
@@ -248,39 +330,6 @@
               name="email"
               type="email"
               autocomplete="email"
-              required
-              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
-            />
-          </div>
-
-          <div>
-            <label
-              for="telefono"
-              class="block text-sm font-medium leading-6 text-principal-blue-400"
-              >Teléfono</label
-            >
-            <input
-              formControlName="telefono"
-              id="telefono"
-              name="telefono"
-              type="text"
-              autocomplete="telefono"
-              required
-              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
-            />
-          </div>
-
-          <div>
-            <label
-              for="direccion"
-              class="block text-sm font-medium leading-6 text-principal-blue-400"
-              >Dirección</label
-            >
-            <input
-              formControlName="correo"
-              id="direccion"
-              name="direccion"
-              type="text"
               required
               class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
             />
@@ -311,27 +360,6 @@
           </div>
 
           <div>
-            <div class="flex justify-between">
-              <label
-                for="confirm_password"
-                class="block text-sm font-medium leading-6 text-principal-blue-400"
-                >Repetir contraseña
-              </label>
-
-            </div>
-            <input
-              formControlName="confirmPassword"
-              id="confirmPassword"
-              name="confirmPassword"
-              type="password"
-              required
-              class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"/>
-            <div class="text-errors-red-300" *ngIf="formularioRegistro.hasError('notSame')">
-              La contraseña no coincide
-            </div>
-          </div>
-
-          <div>
             <button
               type="submit"
               class="w-full py-3 bg-black text-white rounded-full shadow-md hover:bg-pricipal-grey-400 transition duration-300"
@@ -343,8 +371,6 @@
       </div>
 
       <hr class="mt-8" />
-
-
 
       <div class="container-member">
         <p class="mt-8 text-center text-sm text-pricipal-grey-400">
