Fix Redireccion URL's, Inicio, Login, Editar, Toolbar

--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,110 +1,132 @@
-
 <div *ngIf="isMobilView; else desktopView">
-  <h1>
-    Aqui hay que trabajar el toolbar para ver la versión mobil
-    el que le meta mano aqui ideal dejarlo como burger besitos en el oclo
-  </h1>
+
+
+  <nav class="bg-white border-gray-200 dark:bg-gray-900">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+      <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+      </a>
+      <button data-collapse-toggle="navbar-default" type="button"
+        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M1 1h15M1 7h15M1 13h15" />
+        </svg>
+      </button>
+      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+        <ul
+          class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+          <li>
+            <a href="#"
+              class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500"
+              aria-current="page">Home</a>
+          </li>
+          <li>
+            <a href="#"
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+          </li>
+          <li>
+            <a href="#"
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+          </li>
+          <li>
+            <a href="#"
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
+          </li>
+          <li>
+            <a href="#"
+              class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
 </div>
 
 
 <ng-template #desktopView>
   <!-- <ion-content> -->
-<div
-  class="fixed top-0 z-50 w-full border-b-1
-        shadow-md border-principal-grey-400 bg-white"
->
-  <div class="px-3 py-4 lg:px-5 lg:pl-3">
-    <div class="flex items-center justify-between gap-2">
-      <div class="flex items-center justify-between sm:ml-4 md:ml-6 xl:ml-8">
+  <div class="fixed top-0 z-50 w-full border-b-1
+        shadow-md border-principal-grey-400 bg-white">
+    <div class="px-3 py-4 lg:px-5 lg:pl-3">
+      <div class="flex items-center justify-between gap-2">
+        <div class="flex items-center justify-between sm:ml-4 md:ml-6 xl:ml-8">
 
-        <img
-          class="flex ml-8 sm:ml-4 md:ml-6 xl:ml-8"
-          src="../../../../assets/icon/Logo_AppDopta.jpeg" class="size-20 rounded-lg"
-          alt="FlowBite Logo"
-        />
+          <img class="flex ml-8 sm:ml-4 md:ml-6 xl:ml-8" src="../../../../assets/icon/Logo_AppDopta.jpeg"
+            class="size-20 rounded-lg" alt="FlowBite Logo" />
 
-        <div class="ml-8 flex items-center justify-between sm:ml-4 md:ml-6 xl:ml-8">
-          <h1 class="text-3xl font-bold">AppDopta</h1>
-          <p class="ml-4 text-3xl text-principal-grey-400">|</p>
-        </div>
-
-        <div class="ml-8 flex items-center justify-between text-principal-grey-400 font-semibold sm:flex-wrap md:flex-nowrap xl:flex-nowrap">
-          <a href="dashboard/adoptar" class="px-4 hover:text-principal-grey-700">Adoptar</a>
-          <a href="dashboard/eventos" class="px-4 hover:text-principal-grey-700">Eventos</a>
-          <a href="dashboard/favoritos" class="px-4 hover:text-principal-grey-700">Favoritos</a>
-          <a href="dashboard/mapa-servicios" class="px-4 hover:text-principal-grey-700">Mapa de servicios</a>
-          <a href="dashboard/sobre-nosotros" class="px-4 hover:text-principal-grey-700">Sobre nosotros</a>
-          <a href="dashboard/contacto" class="px-4 hover:text-principal-grey-700">Contacto</a>
-        </div>
-
-      </div>
-
-      <div class="flex items-center relative sm:mr-4 md:mr-6 xl:mr-8">
-        <div class="flex items-center ms-3">
-
-          <div *ngIf="currentUser?.user?.username ; else notLoggedIn">
-            <button
-              type="button"
-              (click)="toggleProfileIcon()"
-              class="flex items-center justify-center text-sm bg-principal-blue-400 rounded-full focus:ring-4
-                    focus:ring-principal-blue-600"
-              style="width: 50px; height: 50px;"
-            >
-              <span class="sr-only">Open user menu</span>
-              <div
-                class="flex items-center justify-center rounded-full bg-principal-grey-400"
-                style="width: 50px; height: 50px;"
-              >
-                <img
-                class="rounded-full" [src]="currentUser.imagen_perfil" [alt]="currentUser.nombre"
-                style="width: 40px; height: 40px;"
-                > <!--TODO:AJUSTAR PARA QUE SE VEA FOTO DE PERFIL-->
-              </div>
-            </button>
+          <div class="ml-8 flex items-center justify-between sm:ml-4 md:ml-6 xl:ml-8">
+            <h1 class="text-3xl font-bold">AppDopta</h1>
+            <p class="ml-4 text-3xl text-principal-grey-400">|</p>
           </div>
 
-          <ng-template #notLoggedIn>
-            <div class="ml-8 flex items-center justify-between text-pricipal-grey-400 font-semibold">
-              <a href="auth/" class="px-4 hover:text-principal-grey-700">Login</a>
-              <a href="auth/registro" class="px-4 hover:text-principal-grey-700">Registro</a>
-            </div>
-          </ng-template>
+          <div
+            class="ml-8 flex items-center justify-between text-principal-grey-400 font-semibold sm:flex-wrap md:flex-nowrap xl:flex-nowrap">
+            <a href="dashboard/adoptar" class="px-4 hover:text-principal-grey-700">Adoptar</a>
+            <a href="dashboard/eventos" class="px-4 hover:text-principal-grey-700">Eventos</a>
+            <a href="dashboard/favoritos" class="px-4 hover:text-principal-grey-700">Favoritos</a>
+            <a href="dashboard/mapa-servicios" class="px-4 hover:text-principal-grey-700">Mapa de servicios</a>
+            <a href="dashboard/sobre-nosotros" class="px-4 hover:text-principal-grey-700">Sobre nosotros</a>
+            <a href="dashboard/contacto" class="px-4 hover:text-principal-grey-700">Contacto</a>
+          </div>
 
-          @if( isOpenProfile() ){
-            <div
-              class="z-50 text-white font-roboto-mono font-bold mr-4 list-none divide-y
+        </div>
+
+        <div class="flex items-center relative sm:mr-4 md:mr-6 xl:mr-8">
+          <div class="flex items-center ms-3">
+
+            <div *ngIf="currentUser?.user?.username ; else notLoggedIn">
+              <button type="button" (click)="toggleProfileIcon()" class="flex items-center justify-center text-sm bg-principal-blue-400 rounded-full focus:ring-4
+                    focus:ring-principal-blue-600" style="width: 50px; height: 50px;">
+                <span class="sr-only">Open user menu</span>
+                <div class="flex items-center justify-center rounded-full bg-principal-grey-400"
+                  style="width: 50px; height: 50px;">
+                  <img class="rounded-full" [src]="currentUser.imagen_perfil" [alt]="currentUser.nombre"
+                    style="width: 40px; height: 40px;"> <!--TODO:AJUSTAR PARA QUE SE VEA FOTO DE PERFIL-->
+                </div>
+              </button>
+            </div>
+
+            <ng-template #notLoggedIn>
+              <div class="ml-8 flex items-center justify-between text-pricipal-grey-400 font-semibold">
+                <a href="auth/" class="px-4 hover:text-principal-grey-700">Login</a>
+                <a href="auth/registro" class="px-4 hover:text-principal-grey-700">Registro</a>
+              </div>
+            </ng-template>
+
+            @if( isOpenProfile() ){
+            <div class="z-50 text-white font-roboto-mono font-bold mr-4 list-none divide-y
                     rounded-lg shadow absolute w-64 px-4 py-2
-                    right-[0rem] top-[3.3rem] bg-principal-blue-400 divide-principal-grey-700"
-            >
+                    right-[0rem] top-[3.3rem] bg-principal-blue-400 divide-principal-grey-700">
               <div class="py-3" role="none">
-                <p class="text-sm truncate px-2 text-white">{{currentUser.user.username | titlecase }}#{{currentUser.user.id}}</p>
+                <p class="text-sm truncate px-2 text-white">{{currentUser.user.username | titlecase
+                  }}#{{currentUser.user.id}}</p>
               </div>
               <ul class="py-4" role="none">
                 <li class="rounded-lg py-2 my-2 grid grid-rows-2 gap-4">
-                  <span
-                    class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
-                    (click)="toggleProfile()"
-                  >
+                  <span class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
+                    (click)="toggleProfile()">
                     <i class="fa-solid fa-gear"></i>
                     configuraciones
                   </span>
 
-                  <span
-                    class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
-                    (click)="onLogout()"
-                  >
+                  <span class="text-sm rounded-lg py-1 px-2 cursor-pointer hover:bg-principal-grey-700"
+                    (click)="onLogout()">
                     <i class="fa-solid fa-right-from-bracket"></i>
                     Cerrar Sesión
                   </span>
                 </li>
               </ul>
             </div>
-          }
+            }
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<!-- </ion-content> -->
+  <!-- </ion-content> -->
 </ng-template>
-
