--- a/src/app/auth/pages/editar-persona/editar-persona.page.html
+++ b/src/app/auth/pages/editar-persona/editar-persona.page.html
@@ -211,8 +211,7 @@
         class="space-y-1"
         [formGroup]="userForm"
         (ngSubmit)="onSubmit()" >
-          <h2 class="text-4xl text-principal-grey-700 font-bold mb-0 pb-0">¡Crea tu cuenta!</h2>
-          <p class="text-pricipal-grey-400 mt-0 pt-0">¡Es gratis!</p>
+          <h2 class="text-4xl text-principal-grey-700 font-bold mb-0 pb-0">Actualiza tú información</h2>
           <div>
             <label
               for="nombre"
@@ -323,8 +322,22 @@
             />
           </div>
 
+          <div>
+            <label for="imagen_perfil" class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400">Imagen de perfil</label>
+              <div class="mt-1">
+                <input type="file" id="imagen_perfil" (change)="onImgSelected($event)" class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+              </div>
+          </div>
 
           <div>
+            <label for="documento" class="block ml-1 text-sm font-medium leading-6 text-principal-blue-400">Agregar documentos</label>
+              <div class="mt-1">
+                <input type="file" id="documento" (change)="onDocumentSelected($event)" class="block w-72 pl-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+              </div>
+          </div>
+
+
+          <div class="mt-8">
             <button
               type="submit"
               class="w-full py-3 bg-black text-white rounded-full shadow-md hover:bg-pricipal-grey-400 transition duration-300"
@@ -336,6 +349,16 @@
       </div>
 
       <hr class="mt-8" />
+
+      <div class="mt-8">
+            <!--TODO:Agregar redireccion al dashboard -->
+            <button
+              type="submit"
+              class="w-full py-3 bg-black text-white rounded-full shadow-md hover:bg-pricipal-grey-400 transition duration-300"
+            >
+              Volver
+            </button>
+          </div>
 
     </div>
       </div>
