Cambiando interfaces en Registro persona y editar persona, se agrega fecha de nacimiento a los campos

--- a/src/app/auth/pages/registro/registro.page.html
+++ b/src/app/auth/pages/registro/registro.page.html
@@ -347,6 +347,11 @@
               class="block w-full rounded-md border-pricipal-grey-400 border-2 shadow-sm py-2 px-3 focus:ring-pricipal-grey-400 focus:border-principal-grey-700"
             />
           </div>
+          
+          <div class="flex space-x-4">
+            <label for="fec_nac">Fecha de Nacimiento</label>
+            <input type="date" id="fec_nac" formControlName="fec_nac" class="border rounded px-2 py-1">
+          </div>
 
           <div>
             <label
